--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageResourceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RleTest.cs" />
   </ItemGroup>
