--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -69,6 +69,9 @@
     <Compile Include="..\PsdFile\ImageResources\Thumbnail.cs">
       <Link>PsdFile\ImageResources\Thumbnail.cs</Link>
     </Compile>
+    <Compile Include="..\PsdFile\ImageResources\UnicodeAlphaNames.cs">
+      <Link>PsdFile\ImageResources\UnicodeAlphaNames.cs</Link>
+    </Compile>
     <Compile Include="..\PsdFile\ImageResources\VersionInfo.cs">
       <Link>PsdFile\ImageResources\VersionInfo.cs</Link>
     </Compile>
