--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{37844BEF-D221-438D-8380-D44CF50A5A87}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>Tests</AssemblyName>
+    <RootNamespace>PhotoshopFile.Tests</RootNamespace>
+    <AssemblyName>PhotoshopFile.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ImageResourceTest.cs" />
+    <Compile Include="ImageResourceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RleTest.cs" />
+    <Compile Include="RleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PhotoShopFileType\PhotoShop.csproj">
