Store RLE row lengths as semantic array
By storing the RLE row lengths as a semantic array, we avoid cluttering
up CompressImageData() with code to convert to a byte blob.  It also
becomes possible to cross-check the total length against the image data
length when loading.

--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -123,6 +123,9 @@
     <Compile Include="..\PsdFile\RleReader.cs">
       <Link>PsdFile\RleReader.cs</Link>
     </Compile>
+    <Compile Include="..\PsdFile\RleRowLengths.cs">
+      <Link>PsdFile\RleRowLengths.cs</Link>
+    </Compile>
     <Compile Include="..\PsdFile\RleWriter.cs">
       <Link>PsdFile\RleWriter.cs</Link>
     </Compile>
