Retarget to Paint.NET 4.0
The projects now target the .NET Framework 4 Client Profile, to match
the Paint.NET 4.0 DLLs.  In addition, Layer.BlendOp has been deprecated
in favor of Layer.BlendMode.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,10 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PhotoshopFile.Tests</RootNamespace>
     <AssemblyName>PhotoshopFile.Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
