--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ Build/*.zip
 .builds
 *.dotCover
 
-## TODO: If you have NuGet Package Restore enabled, uncomment this
-#packages/
+# NuGet packages are restored automatically
+packages/
 
 # Visual C++ cache files
 ipch/
