--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -106,6 +106,9 @@
     <Compile Include="..\PsdFile\ImageResource.cs">
       <Link>PsdFile\ImageResource.cs</Link>
     </Compile>
+    <Compile Include="..\PsdFile\LoadContext.cs">
+      <Link>PsdFile\LoadContext.cs</Link>
+    </Compile>
     <Compile Include="..\PsdFile\PsdBinaryReader.cs">
       <Link>PsdFile\PsdBinaryReader.cs</Link>
     </Compile>
@@ -135,6 +138,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BlendModeMapping.cs" />
+    <Compile Include="DocumentLoadContext.cs" />
     <Compile Include="ImageDecoderPdn.cs" />
     <Compile Include="PhotoshopFileType.cs" />
     <Compile Include="PsdLoad.cs" />
