#6 Layer groups/folder now can be saved back. While Paint.NET layers are flat all groups should be surrounded by "Layer Group:" and "End Layer Group:". Those layer boundaries are created by default when PSD is loaded. Tool will restore structure automatically if user will mess up end and start layers.

--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -163,6 +163,7 @@
     <Compile Include="..\PsdFile\Util.cs">
       <Link>PsdFile\Util.cs</Link>
     </Compile>
+    <Compile Include="BitmapLayerInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BlendModeMapping.cs" />
     <Compile Include="DocumentLoadContext.cs" />
