--- a/PhotoShopFileType/PhotoShop.csproj
+++ b/PhotoShopFileType/PhotoShop.csproj
@@ -1,199 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A04EEDD9-E164-4941-9846-722ACF2FCCA1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PhotoShop</RootNamespace>
-    <AssemblyName>PhotoShop</AssemblyName>
-    <SignAssembly>false</SignAssembly>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>net7.0-windows</TargetFramework>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <UseWPF>true</UseWPF>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
+    <Compile Include="..\PsdFile\**\*.cs" Link="PsdFile\%(RecursiveDir)%(Filename)%(Extension)" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic.Forms">
+      <HintPath>C:\Program Files\paint.net\Microsoft.VisualBasic.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="PaintDotNet.Base">
-      <HintPath>C:\Program Files\Paint.NET\PaintDotNet.Base.dll</HintPath>
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.Base.dll</HintPath>
+    </Reference>
+    <Reference Include="PaintDotNet.ComponentModel">
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.ComponentModel.dll</HintPath>
     </Reference>
     <Reference Include="PaintDotNet.Core">
-      <HintPath>C:\Program Files\Paint.NET\PaintDotNet.Core.dll</HintPath>
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.Core.dll</HintPath>
     </Reference>
     <Reference Include="PaintDotNet.Data">
-      <HintPath>C:\Program Files\Paint.NET\PaintDotNet.Data.dll</HintPath>
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="PaintDotNet.Primitives">
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="PaintDotNet.Resources">
-      <HintPath>C:\Program Files\Paint.NET\PaintDotNet.Resources.dll</HintPath>
+      <HintPath>C:\Program Files\paint.net\PaintDotNet.Resources.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
+    <Reference Include="System.Drawing.Common">
+      <HintPath>C:\Program Files\paint.net\System.Drawing.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>C:\Program Files\paint.net\System.Windows.Forms.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\PsdFile\Compression\EndianReverser.cs">
-      <Link>PsdFile\Compression\EndianReverser.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\ImageData.cs">
-      <Link>PsdFile\Compression\ImageData.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\ImageDataFactory.cs">
-      <Link>PsdFile\Compression\ImageDataFactory.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\RawImage.cs">
-      <Link>PsdFile\Compression\RawImage.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\RleImage.cs">
-      <Link>PsdFile\Compression\RleImage.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\ZipImage.cs">
-      <Link>PsdFile\Compression\ZipImage.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\ZipPredict16Image.cs">
-      <Link>PsdFile\Compression\ZipPredict16Image.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Compression\ZipPredict32Image.cs">
-      <Link>PsdFile\Compression\ZipPredict32Image.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\AlphaChannelNames.cs">
-      <Link>PsdFile\ImageResources\AlphaChannelNames.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\RawImageResource.cs">
-      <Link>PsdFile\ImageResources\RawImageResource.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\ResolutionInfo.cs">
-      <Link>PsdFile\ImageResources\ResolutionInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\Thumbnail.cs">
-      <Link>PsdFile\ImageResources\Thumbnail.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\UnicodeAlphaNames.cs">
-      <Link>PsdFile\ImageResources\UnicodeAlphaNames.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResources\VersionInfo.cs">
-      <Link>PsdFile\ImageResources\VersionInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\LayerInfo\InfoLayers.cs">
-      <Link>PsdFile\Layers\LayerInfo\InfoLayers.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\LayerInfo\LayerSectionInfo.cs">
-      <Link>PsdFile\Layers\LayerInfo\LayerSectionInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\LayerInfo\LayerUnicodeName.cs">
-      <Link>PsdFile\Layers\LayerInfo\LayerUnicodeName.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\LayerInfo\RawLayerInfo.cs">
-      <Link>PsdFile\Layers\LayerInfo\RawLayerInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\BlendingRanges.cs">
-      <Link>PsdFile\Layers\BlendingRanges.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\Channel.cs">
-      <Link>PsdFile\Layers\Channel.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\Layer.cs">
-      <Link>PsdFile\Layers\Layer.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\LayerInfo.cs">
-      <Link>PsdFile\Layers\LayerInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Layers\Mask.cs">
-      <Link>PsdFile\Layers\Mask.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Exceptions.cs">
-      <Link>PsdFile\Exceptions.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\ImageResource.cs">
-      <Link>PsdFile\ImageResource.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\LoadContext.cs">
-      <Link>PsdFile\LoadContext.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\PsdBinaryReader.cs">
-      <Link>PsdFile\PsdBinaryReader.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\PsdBinaryWriter.cs">
-      <Link>PsdFile\PsdBinaryWriter.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\PsdBlendMode.cs">
-      <Link>PsdFile\PsdBlendMode.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\PsdBlockLengthWriter.cs">
-      <Link>PsdFile\PsdBlockLengthWriter.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\PsdFile.cs">
-      <Link>PsdFile\PsdFile.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\RleReader.cs">
-      <Link>PsdFile\RleReader.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\RleRowLengths.cs">
-      <Link>PsdFile\RleRowLengths.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\RleWriter.cs">
-      <Link>PsdFile\RleWriter.cs</Link>
-    </Compile>
-    <Compile Include="..\PsdFile\Util.cs">
-      <Link>PsdFile\Util.cs</Link>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BlendModeMapping.cs" />
-    <Compile Include="DocumentLoadContext.cs" />
-    <Compile Include="ImageDecoderPdn.cs" />
-    <Compile Include="PhotoshopFileType.cs" />
-    <Compile Include="PsdLoad.cs" />
-    <Compile Include="PsdPluginResources.cs" />
-    <Compile Include="PsdSave.cs" />
-    <Compile Include="PsdSaveConfigToken.cs" />
-    <Compile Include="PsdSaveConfigWidget.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="PsdSaveConfigWidget.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>PsdSaveConfigWidget.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources.resx">
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CustomToolNamespace>PaintDotNet.Data.PhotoshopFileType</CustomToolNamespace>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
